Se cambia el enlace de css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Frutas</title>
-  <link rel="stylesheet" href="CSS/style.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body  class="cuerpo">
 <section class="form">
